--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@ body {
 	line-height: 1.7;
 	font-family: 'Open Sans', sans-serif;
 	color: #777;
-	background-color: #fff;
 }
 
 .page {
@@ -29,17 +28,28 @@ body {
 	margin-left: auto;
 }
 
+
+
 h1,
 h2,
 h3,
 figcaption,
-.heading {
+.button-group .button {
 	font-weight: 400;
-	font-size: 24px;
+	font-size: 18px;
 	line-height: 1.2;
 	font-family: 'Dosis', sans-serif;
 	text-transform: uppercase;
-	color: #111;
+}
+
+a {
+	text-decoration: none;
+	color: inherit;
+	/*чтобы ссылка наследовала цвет от родителя*/
+}
+
+ul {
+	list-style: none;
 }
 
 img {
@@ -48,20 +58,66 @@ img {
 	width: 100%;
 }
 
-a,
+input,
+button,
+textarea {
+	border: none;
+}
+
+textarea {
+	resize: vertical;
+}
+
+button {
+	cursor: pointer;
+}
+
+/* ======================= */
+
+/* Default clasess start */
+
+.mx-auto {
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.row {
+	margin: 0 -15px 0;
+}
+
+[class*="col-"] {
+	padding: 0 15px 0;
+	width: 100%;
+}
+
+.text-center {
+	text-align: center;
+}
+
+.bg-dark {
+	background-color: #111;
+}
+
+.bg-light {
+	background-color: #f8f8f8;
+}
+
 .invert * {
 	color: #fff;
 }
 
-.invert p,.invert q {
+.invert p,
+.invert q {
 	opacity: .7;
 }
+
 .invert cite {
 	opacity: .3;
 }
-.text-center {
-	text-align: center;
-}
+
+/* ======= Default clasess end ======*/
+
+/* ====== Custom styles start  ======*/
 
 /*header*/
 
@@ -76,18 +132,16 @@ a,
 	margin-top: 10px;
 }
 
-.list-nav {
-	list-style-type: none;
+.list-item {
+	color: #fff;
 }
 
 .list-nav li a {
-	text-transform: uppercase;
-	text-decoration: none;
 	font-weight: 400;
 	font-size: 12px;
 	line-height: 1;
 	font-family: 'Open Sans', sans-serif;
-	color: #fff;
+	text-transform: uppercase;
 	opacity: .75;
 }
 
@@ -97,11 +151,10 @@ a,
 
 /*main*/
 
-/*section-1*/
+/*===== section-1 =====*/
 
 .section-1 {
 	position: relative;
-	text-align: center;
 	background-image: url(../img/bg.jpg);
 	background-size: cover;
 	background-position: center;
@@ -116,7 +169,7 @@ a,
 
 }
 
-.section-1 h1,
+h1,
 .section-1 p {
 	color: #fefefe;
 }
@@ -127,7 +180,7 @@ h1 {
 	opacity: .9;
 }
 
-h1 + p {
+.section-1 p {
 	margin-top: 34px;
 	font-size: 16px;
 	line-height: 1.2;
@@ -155,34 +208,24 @@ h1 + p {
 	transform: rotate(-45deg);
 }
 
-/*standart-section*/
+/*===== line-bottom start =====*/
 
 .standart-section {
-	padding: 46px 0 74px;
+	padding: 46px 0 46px;
 }
 
 .row + .row {
 	margin-top: 28px;
 }
 
-[class*="col-"] {
-	padding: 0 15px 0;
-	width: 100%;
-}
-
 .col-4 + .col-4,
 .col-5 + .col-5 {
-	margin-top: 28px;
+	margin-top: 30px;
 }
 
-.title-bottom,.title-center {
+.line-bottom h2 {
 	margin-bottom: 25px;
-	font-size: 18px;
 	letter-spacing: 0.1em;
-}
-
-.row {
-	margin: 0 -15px 0;
 }
 
 blockquote p {
@@ -199,12 +242,13 @@ cite {
 	letter-spacing: 0.2em;
 }
 
-/*team*/
+/*===== team =====*/
 
 .line-bottom {
 	border-bottom: 1px solid #777;
 	opacity: .8;
 }
+
 
 figcaption {
 	margin-top: 15px;
@@ -214,38 +258,42 @@ figcaption {
 	color: #777;
 }
 
-span {
+figcaption span {
 	display: block;
 	margin-top: 8px;
 	font-size: 15px;
 	line-height: 1.2;
 }
 
-/*section-center*/
+/*===== line-bottom end =====*/
+
+/*===== section-center start =====*/
+
 .section-center {
-	padding: 68px;
+	padding-bottom: 56px;
 }
-.section-center .title-center {
+
+.section-center .title {
 	margin-bottom: 40px;
 	font-size: 18px;
 	letter-spacing: 0.1em;
 }
 
-.icon-col-5 {
-	text-decoration: none;
+
+.icon-center {
+	display: inline-block;
 	color: #111;
 }
 
-.icon-col-5:hover,
-.heading:hover {
+.icon-center:hover {
 	color: #777;
 }
 
-.icon-col-5 > span {
+.icon-center > span {
 	font-size: 48px;
 }
 
-.heading {
+h3 {
 	margin-top: 18px;
 	font-size: 14px;
 	letter-spacing: 0.4em;
@@ -270,11 +318,13 @@ span {
 .icon-camera:before {
 	content: "\e012";
 }
-/*-------- section-dark ---------*/
+
+/*=====section-center end =====*/
+
+/*===== section-dark iMack start =====*/
 
 .section-2 {
-	padding: 70px 0 27px;
-	background-color: #111;
+	padding-top: 46px;
 }
 
 .btn {
@@ -287,33 +337,32 @@ span {
 	font-family: 'Open Sans', sans-serif;
 	letter-spacing: 0.2em;
 	text-transform: uppercase;
-	text-decoration: none;
 	color: #111;
-	background-color: #fff;
+	background-color: #cfcfcf;
 	opacity: .8;
 }
 
 .btn:hover {
 	opacity: 1;
-	border-radius: 3px;
+	background-color: #fff;
 	color: #000;
 }
 
-.title-dark {
-	margin-bottom: 14px;
+.section-imack h2 {
+	margin-bottom: 26px;
 	font-weight: 300;
 	font-size: 18px;
 	letter-spacing: 0.1em;
 }
 
-.title-dark + p {
-	margin-bottom: 20px;
+.section-imack p {
+	margin-bottom: 38px;
 	line-height: 1.4;
 }
 
 .imack {
 	position: relative;
-	margin-top: 0; 
+	margin-top: 0;
 	overflow: hidden;
 }
 
@@ -326,18 +375,26 @@ span {
 	width: 76%;
 }
 
+.imack .imack-screen img {
+	will-change: transform;
+	transition: 1.5s all ease-in-out;
+}
+
 .imack .imack-screen:hover img {
-	transform: translateY(88%);
+	transform: translateY(-88%);
 	transition: 5s all linear;
 }
 
-/*====== Isotope ======*/
-.section-3 {
-	padding-top: 68px;
+/*=====section-dark iMack end =====*/
+
+/*===== section-3 start =====*/
+
+.section-3 h2 {
+	margin-bottom: 38px;
 }
-.section-3 .title-center {
-	margin-bottom: 40px;
-}
+
+/*====== Isotope start ======*/
+
 .button-group {
 	margin: 40px 0 25px;
 }
@@ -357,24 +414,95 @@ span {
 	filter: grayscale(0);
 }
 
-.is-checked {
+.button-group .button {
+	font-size: 13px;
+	letter-spacing: 0.4em;
+	color: rgba(17, 17, 17, .5);
 	background-color: #58977a;
 }
-/* owl-carousel */
+
+.button-group .button:hover {
+	color: rgba(0, 0, 0, 1);
+	opacity: .7;
+}
+
+/*====== Isotope end ======*/
+
+/*===== section-dark start=====*/
+
+.section-dark {
+	padding: 68px 0;
+}
+
+.section-dark h2 {
+	margin-bottom: 22px;
+	font-weight: 300;
+	line-height: 1.444;
+	letter-spacing: 0.3em;
+}
+
+/*===== section-dark end =====*/
+
+/*===== benefit start =====*/
+
+.benefit {
+	padding-bottom: 48px;
+}
+
+.benefit h2 {
+	margin-bottom: 43px;
+}
+
+.benefit p {
+	font-weight: 300;
+	font-size: 14px;
+	line-height: 1.857;
+	font-family: 'Open Sans', sans-serif;
+	letter-spacing: 0;
+	text-align: left;
+	color: #777;
+}
+
+.benefit a + p {
+	margin-bottom: 43px;
+}
+
+/*===== benefit end =====*/
+
+/* ===== owl-carousel ====== */
+
+.carousel {
+	position: relative;
+	padding-bottom: 30px;
+}
+
+blockquote q {
+	quotes: none;
+}
+
 .owl-item-inner {
-	margin: 0 auto;
 	padding: 0 15px;
 }
-.owl-carousel span[class*="icon"]{
-font-size: 32px;
-margin-bottom: 20px;
+
+.icon-quote:before {
+	content: "\e057";
 }
+
+.owl-carousel {}
+
+.owl-carousel span[class*="icon"] {
+	font-size: 32px;
+	margin-bottom: 20px;
+	/*используем такой селектор на случай,если захотим поменять иконку*/
+}
+
 .owl-carousel blockquote {
- margin-top: 40px; 
+	margin-top: 40px;
 	font-size: 18px;
 	font-weight: 300;
-	line-height: 1.666; 
+	line-height: 1.666;
 }
+
 .owl-carousel blockquote cite {
 	display: block;
 	margin-top: 24px;
@@ -382,10 +510,151 @@ margin-bottom: 20px;
 	letter-spacing: 0.2em;
 	text-transform: uppercase;
 }
+
+
+.owl-carousel .owl-nav button.owl-prev,
 .owl-carousel .owl-nav button.owl-next {
-	
+	height: 56px;
+	width: 56px;
+	position: absolute;
+	bottom: 50%;
+	background-color: #fff;
+	transform: translate(50%, -50%);
+	transform: rotate(45deg);
 }
-/*------- media -------*/
+
+.owl-carousel .owl-nav button.owl-prev {
+	left: -45px;
+}
+
+.owl-carousel .owl-nav button.owl-next {
+	right: -45px;
+}
+
+.owl-carousel .owl-nav button.owl-next::before,
+.owl-carousel .owl-nav button.owl-prev::before {
+	height: 6px;
+	width: 6px;
+	display: inline-block;
+	position: absolute;
+	z-index: 1;
+	font-size: 16px;
+	font-family: 'FontAwesome';
+	color: #222;
+	transform: rotate(-45deg);
+}
+
+.owl-carousel .owl-nav button.owl-prev::before {
+	content: "\f104";
+	right: 32px;
+	bottom: 65px;
+}
+
+.owl-carousel .owl-nav button.owl-next::before {
+	content: "\f105";
+	left: 5px;
+	bottom: 18px;
+}
+
+.owl-carousel .owl-dots button.owl-dot {
+	height: 9px;
+	width: 9px;
+	background-color: #ccc;
+	opacity: .8;
+	border-radius: 50%;
+	border: 1px solid transparent;
+}
+
+.owl-carousel .owl-dots button.owl-dot:nth-child(n+2) {
+	margin-left: 5px;
+}
+
+.owl-carousel .owl-dots button.owl-dot:hover {
+	background-color: transparent;
+	border: 1px solid #ccc;
+}
+
+#map {
+	height: 410px;
+	width: 100%;
+	/*	background-color: #ccc;*/
+}
+
+footer {
+	padding: 46px 0 28px;
+}
+
+footer div {
+	padding: 0 15px;
+}
+
+footer div a {
+	display: block;
+	height: 30px;
+	width: 78px;
+}
+.copywriting {
+	margin-top: 104px;
+}
+.copywriting > span {
+	display: block;
+	
+	color: #222;
+}
+
+.social-icon {
+	height: 32px;
+	width: 32px;
+	display: inline-block;
+	font-size: 14px;
+	line-height: 2.71;
+	color: #340e0e;
+	border: 1px solid #9f9f9f;
+	transform: rotate(45deg);
+}
+
+.fab {
+	transform: rotate(-45deg);
+}
+.copywriting > span:first-child {
+	line-height: 1.5;
+	letter-spacing: .5em;
+	text-transform: uppercase;
+}
+
+.copywriting > span:nth-child(n+2) {
+	margin-top: 15px;
+	opacity: .7;
+}
+
+.totop-button {
+	height: 0;
+	width: 0;
+	position: fixed;
+	right: 30px;
+	bottom: 30px;
+	border: 20px solid transparent;
+	border-bottom: 20px solid #c6c6c6;
+	border-radius: 3px;
+	z-index: 1000;
+	visibility: hidden;
+	transition: 0.3s;
+	opacity: 0;
+}
+
+.totop-button:hover {
+	cursor: pointer;
+	border-bottom-color: #111;
+}
+
+.totop-button.show {
+	opacity: 1;
+	visibility: visible;
+}
+
+/* ===== Custom styles end ======== */
+
+/*===== @media (min-width: 768px) start ======*/
 
 @media (min-width: 768px) {
 	.header-page {
@@ -419,19 +688,25 @@ margin-bottom: 20px;
 	h1 {
 		letter-spacing: 1.2em;
 	}
-	h1 + p {
+	.section-1 p {
 		margin-top: 68px;
 		font-size: 19px;
 	}
 
 	.standart-section {
-		padding: 92px 0 74px;
+		padding: 92px 0 92px;
 	}
 
-	.title-bottom {
-		margin-bottom: 50px;
+	.line-bottom h2,
+	.section-center h2,
+	.section-3 h2,
+	.benefit h2,
+	.bg-dark h2 {
 		line-height: 1.2;
 		letter-spacing: 0.5em;
+	}
+	.line-bottom h2 {
+		margin-bottom: 50px;
 	}
 
 	.row + .row {
@@ -458,18 +733,18 @@ margin-bottom: 20px;
 		margin-top: 15px;
 		font-size: 15px;
 	}
-	span {
+	figcaption span {
 		margin-top: 16px;
 		font-size: 12px;
 	}
 
 	.section-center {
-		padding: 136px;
+		padding-bottom: 112px;
 	}
-	.title-center {
+	.section-center h2 {
 		margin-bottom: 80px;
 	}
-	.title-center + .row {
+	.section-center h2 + .row {
 		display: flex;
 		flex-wrap: wrap;
 	}
@@ -482,13 +757,14 @@ margin-bottom: 20px;
 		flex-basis: 25%;
 	}
 
-	.title-dark {
-		margin-bottom: 28px;
+	.section-2 {
+		padding-top: 92px;
+	}
+	.section-imack h2 {
 		letter-spacing: 0.3em;
 		line-height: 1.4;
 	}
-	.title-dark + p {
-		margin-bottom: 40px;
+	.section-imack p {
 		line-height: 1.7;
 	}
 	.col-6 {
@@ -497,74 +773,134 @@ margin-bottom: 20px;
 	}
 
 	.imack {
-			margin-top: -102px;
+		margin-top: -102px;
+	}
+	/*===== section-dark iMack end ======*/
+	.section-3 h2 {
+		margin-bottom: 76px;
+	}
+
+	.standart-section.section-3 {
+		padding-bottom: 8px;
 	}
 
 	.grid-item {
 		width: 50%;
 	}
+
+	.benefit {
+		padding-bottom: 96px;
+	}
+	.benefit h2 {
+		margin-bottom: 86px;
+	}
+	.benefit .icon-center > h3 {
+		margin: 32px 0;
+	}
+	.benefit a + p {
+		margin-bottom: 86px;
+	}
+	.owl-carousel .owl-nav button.owl-next,
+	.owl-carousel .owl-nav button.owl-prev {
+		height: 66px;
+		width: 66px;
+	}
+
+	/*
+	footer {
+		padding: 92px 0 58px;
+	}
+*/
 }
+
+/*===== @media (min-width: 768px) end =====*/
+
+/*===== @media (min-width: 992px) start =====*/
 
 @media (min-width: 992px) {
 	h1 {
 		letter-spacing: 1.7em;
 	}
-	h1 + p {
+	.section-1 p {
 		margin-top: 102px;
 	}
-	.title-bottom {
+	.line-bottom h2 {
 		margin-bottom: 77px;
 	}
 	.row + .row {
 		margin-top: 108px;
 	}
 	.col-4 {
-		width: 33.333333%;
+		width: 33.333%;
 	}
 	.col-4:nth-child(3) {
 		margin-top: 0;
 	}
 
 	.standart-section {
-		padding-top: 140px;
+		padding: 138px 0 138px;
 	}
-	.title-center {
+	.section-center {
+		padding-bottom: 168px;
+	}
+	.section-center h2 {
 		margin-bottom: 122px;
 	}
 	.col-5:nth-child(-n+4) {
 		margin-top: 0;
 	}
 	.section-2 {
-		padding: 140px 0 54px;
+		padding-top: 138px;
 	}
+
+	.imack {
+		margin-top: -180px;
+	}
+
 	.grid-item {
 		width: 33.333333%;
 	}
-	.section-3 {
-		padding-top: 136px;
+
+	.benefit {
+		padding-bottom: 144px;
 	}
+
+	/*
+	footer {
+		padding-top: 138px;
+	}
+*/
 }
+
+/*===== @media (min-width: 992px) end =====*/
+
+/*===== @media (min-width: 1200px) start =====*/
 
 @media (min-width: 1200px) {
 	.col-5 {
 		flex-basis: 20%;
-		flex-wrap: nowrap;
 	}
 	.col-5:last-child {
 		margin-top: 0;
 	}
-.section-3 {
-margin-bottom: 75px;
-	}
-	.section-3 > .text-center p {
-		width: 65.666667%;
+
+	.section-3 .text-center {
+		width: 66.666667%;
 		margin-right: auto;
 		margin-left: auto;
 	}
 	.button-group {
 		margin: 80px 0 50px;
 	}
-	.owl-item-inner{
-	width: 45%;
+	.owl-item-inner {
+		width: 66.666667%;
 	}
+	.owl-carousel .owl-nav button.owl-next,
+	.owl-carousel .owl-nav button.owl-prev {
+		height: 86px;
+		width: 86px;
+	}
+
 }
+
+/*===== @media (min-width: 1200px) end ======*/
