--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ body {
 	font-family: 'Open Sans', sans-serif;
 	color: #777;
 }
-
 .page {
 	position: relative;
 	/*на случай, чтобы позиционированный элемент отткалкивался от этой обертки*/
@@ -14,7 +13,6 @@ body {
 	min-height: 100vh;
 	/*100% высоты вьюпорта*/
 }
-
 .clearfix::after {
 	content: " ";
 	display: block;
@@ -27,8 +25,6 @@ body {
 	margin-right: auto;
 	margin-left: auto;
 }
-
-
 
 h1,
 h2,
@@ -71,10 +67,20 @@ textarea {
 button {
 	cursor: pointer;
 }
-
 /* ======================= */
 
 /* Default clasess start */
+.relative {
+	position: relative;
+}
+
+.position-absolute {
+	position: absolute;
+}
+
+.overflow-hidden {
+	overflow: hidden;
+}
 
 .mx-auto {
 	margin-left: auto;
@@ -114,13 +120,10 @@ button {
 .invert cite {
 	opacity: .3;
 }
-
 /* ======= Default clasess end ======*/
 
 /* ====== Custom styles start  ======*/
-
 /*header*/
-
 .header-page {
 	position: absolute;
 	left: 28%;
@@ -150,9 +153,7 @@ button {
 }
 
 /*main*/
-
 /*===== section-1 =====*/
-
 .section-1 {
 	position: relative;
 	background-image: url(../img/bg.jpg);
@@ -166,7 +167,6 @@ button {
 	justify-content: center;
 	align-items: center;
 	height: 100vh;
-
 }
 
 h1,
@@ -196,7 +196,6 @@ h1 {
 	transform: rotate(45deg);
 	border-radius: 3px;
 	background-color: #fff;
-
 }
 
 .fa-angle-down {
@@ -209,17 +208,16 @@ h1 {
 }
 
 /*===== line-bottom start =====*/
-
 .standart-section {
 	padding: 46px 0 46px;
 }
 
-.row + .row {
+.row+.row {
 	margin-top: 28px;
 }
 
-.col-4 + .col-4,
-.col-5 + .col-5 {
+.col-4+.col-4,
+.col-5+.col-5 {
 	margin-top: 30px;
 }
 
@@ -243,12 +241,10 @@ cite {
 }
 
 /*===== team =====*/
-
 .line-bottom {
 	border-bottom: 1px solid #777;
 	opacity: .8;
 }
-
 
 figcaption {
 	margin-top: 15px;
@@ -264,21 +260,17 @@ figcaption span {
 	font-size: 15px;
 	line-height: 1.2;
 }
-
 /*===== line-bottom end =====*/
 
 /*===== section-center start =====*/
-
 .section-center {
 	padding-bottom: 56px;
 }
 
-.section-center .title {
+.section-center .container h2 {
 	margin-bottom: 40px;
-	font-size: 18px;
 	letter-spacing: 0.1em;
 }
-
 
 .icon-center {
 	display: inline-block;
@@ -289,7 +281,7 @@ figcaption span {
 	color: #777;
 }
 
-.icon-center > span {
+.icon-center>span {
 	font-size: 48px;
 }
 
@@ -318,11 +310,9 @@ h3 {
 .icon-camera:before {
 	content: "\e012";
 }
-
 /*=====section-center end =====*/
 
 /*===== section-dark iMack start =====*/
-
 .section-2 {
 	padding-top: 46px;
 }
@@ -384,17 +374,15 @@ h3 {
 	transform: translateY(-88%);
 	transition: 5s all linear;
 }
-
 /*=====section-dark iMack end =====*/
 
 /*===== section-3 start =====*/
-
 .section-3 h2 {
 	margin-bottom: 38px;
 }
+/*===== section-3 end =====*/
 
 /*====== Isotope start ======*/
-
 .button-group {
 	margin: 40px 0 25px;
 }
@@ -425,11 +413,9 @@ h3 {
 	color: rgba(0, 0, 0, 1);
 	opacity: .7;
 }
-
 /*====== Isotope end ======*/
 
 /*===== section-dark start=====*/
-
 .section-dark {
 	padding: 68px 0;
 }
@@ -440,11 +426,9 @@ h3 {
 	line-height: 1.444;
 	letter-spacing: 0.3em;
 }
-
 /*===== section-dark end =====*/
 
 /*===== benefit start =====*/
-
 .benefit {
 	padding-bottom: 48px;
 }
@@ -463,14 +447,12 @@ h3 {
 	color: #777;
 }
 
-.benefit a + p {
+.benefit a+p {
 	margin-bottom: 43px;
 }
-
 /*===== benefit end =====*/
 
 /* ===== owl-carousel ====== */
-
 .carousel {
 	position: relative;
 	padding-bottom: 30px;
@@ -487,8 +469,6 @@ blockquote q {
 .icon-quote:before {
 	content: "\e057";
 }
-
-.owl-carousel {}
 
 .owl-carousel span[class*="icon"] {
 	font-size: 32px;
@@ -510,7 +490,6 @@ blockquote q {
 	letter-spacing: 0.2em;
 	text-transform: uppercase;
 }
-
 
 .owl-carousel .owl-nav button.owl-prev,
 .owl-carousel .owl-nav button.owl-next {
@@ -574,12 +553,173 @@ blockquote q {
 	border: 1px solid #ccc;
 }
 
+/*===== section-4 start =====*/
+.section-4 h3::after {
+	content: "";
+	display: block;
+}
+/*===== section-4 end =====*/
+
+/*===== section-41-82 start =====*/
+.section-41-82 {
+	padding: 41px 0;
+}
+
+.section-41-82 h2 {
+	margin-bottom: 22px;
+	font-size: 16px;
+	line-height: 1.625;
+	letter-spacing: .3em;
+}
+
+.section-41-82 input {
+	padding: 7px;
+	border: 1px solid #dfdfdf;
+	background-color: #fff;
+}
+
+.section-41-82 input[placeholder] {
+	font-size: 12px;
+	text-transform: uppercase;
+}
+
+.section-41-82 input,
+.section-41-82 button.btn-invert {
+	display: block;
+}
+
+.section-41-82 button.btn-invert {
+	margin-top: 22px;
+	padding: 12px 20px;
+	font-size: 13px;
+	line-height: 2;
+	color: #fff;
+	background-color: #020202;
+	opacity: .8;
+}
+
+.section-41-82 button.btn-invert:hover {
+	background-color: #111;
+	opacity: 1;
+}
+
+.info {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.info p {
+	margin-left: 5px;
+	font-size: 11px;
+	line-height: 2;
+	font-family: 'Myriad Pro';
+}
+/*===== section-41-82 end =====*/
+
+/*===== section contact start =====*/
+.contact .container h2{
+	margin-bottom: 32px;
+	letter-spacing: 0.1em;
+}
+
+dl dt{
+	font-size: 12px;
+	line-height: 1.2;
+	font-family: 'Dosis', sans-serif;
+	text-transform: uppercase;
+}
+
+col-8 dl dd a{
+	font-family: OpenSans;
+	font-size: 12px;
+	font-weight: 300;
+	line-height: 24.003px;
+	color:  #444;
+}
+/*===== section contact end =====*/
+
+/*===== map-section start ===== */
+.map-section {
+	position: relative;
+	overflow: hidden;
+}
+
 #map {
 	height: 410px;
 	width: 100%;
-	/*	background-color: #ccc;*/
 }
 
+.map-overlay {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background-color: rgba(17, 17, 17, .95);
+	transition: .4s;
+}
+
+.map-overlay.hidden {
+	opacity: 0;
+	visibility: hidden;
+}
+
+.map-overlay h3 {
+	display: inline-block;
+	margin-top: 230px;
+	top: 50%;
+	left: 50%;
+	/*  transform: translate(-50%,-50%);*/
+	transition: .3s;
+	font-size: 16px;
+}
+
+.map-overlay h3::before {
+	content: '';
+	display: inline-block;
+	right: 50%;
+	left: 50%;
+	height: 2px;
+	width: 0;
+	background-color: #fff;
+	transition: .3s;
+}
+
+.map-overlay h3:hover {
+	cursor: pointer;
+}
+
+.map-overlay h3:hover::before {
+	right: 0;
+	left: 0;
+	width: 100%;
+}
+
+.map-overlay .icon {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 36px;
+	width: 36px;
+	bottom: 212px;
+}
+
+.fa-map-marker-alt {
+	transform: rotate(-45deg);
+	color: #222;
+}
+
+.map-overlay .fa-angle-down {
+	display: inline-block;
+	margin-top: 0;
+	letter-spacing: .3em;
+	color: #fff;
+	transform: rotate(0deg);
+}
+/*===== map-section start ===== */
+
+/*=====	footer start =====*/
 footer {
 	padding: 46px 0 28px;
 }
@@ -588,45 +728,77 @@ footer div {
 	padding: 0 15px;
 }
 
-footer div a {
+.bg-logo-ftr {
 	display: block;
 	height: 30px;
 	width: 78px;
-}
-.copywriting {
-	margin-top: 104px;
-}
-.copywriting > span {
-	display: block;
-	
-	color: #222;
+	width: 78px;
+	height: 30px;
+	background: url('../img/css_sprites.png') -10px -10px;
 }
 
-.social-icon {
+.bg-logo-ftr:hover,
+footer ul li:hover {
+	filter: opacity(.7);
+}
+
+footer ul {
+	margin: 12px 0 36px;
+}
+
+footer ul li:nth-child(n+2) {
+	margin-top: 13px;
+}
+
+footer ul li:hover {
+	transform: rotate(360deg);
+	transition: .5s;
+}
+
+.footer-icon {
 	height: 32px;
 	width: 32px;
 	display: inline-block;
-	font-size: 14px;
-	line-height: 2.71;
-	color: #340e0e;
-	border: 1px solid #9f9f9f;
-	transform: rotate(45deg);
 }
 
-.fab {
-	transform: rotate(-45deg);
+.bg-facebook {
+	background: url('../img/css_sprites.png') -108px -10px;
 }
-.copywriting > span:first-child {
+
+.bg-twitter {
+	background: url('../img/css_sprites.png') -62px -112px;
+}
+
+.bg-behance {
+	background: url('../img/css_sprites.png') -10px -60px;
+}
+
+.bg-linkedin {
+	background: url('../img/css_sprites.png') -10px -112px;
+}
+
+.bg-pinterest {
+	background: url('../img/css_sprites.png') -160px -10px;
+}
+
+.copywriting>span {
+	display: block;
+	color: #222;
+}
+
+.copywriting>span:first-child {
 	line-height: 1.5;
 	letter-spacing: .5em;
 	text-transform: uppercase;
 }
 
-.copywriting > span:nth-child(n+2) {
-	margin-top: 15px;
+.copywriting>span:nth-child(n+2) {
+	margin-top: 16px;
 	opacity: .7;
 }
+/*===== footer end =====*/
 
+/*===== totop-button end=====*/
 .totop-button {
 	height: 0;
 	width: 0;
@@ -651,11 +823,9 @@ footer div a {
 	opacity: 1;
 	visibility: visible;
 }
-
 /* ===== Custom styles end ======== */
 
 /*===== @media (min-width: 768px) start ======*/
-
 @media (min-width: 768px) {
 	.header-page {
 		padding: 25px 15px;
@@ -665,26 +835,21 @@ footer div a {
 		display: flex;
 		justify-content: space-between;
 	}
-
 	.page-nav {
 		margin-top: 0;
 	}
-
 	.list-nav {
 		display: flex;
 		justify-content: space-between;
 	}
-
-	.list-item + .list-item {
+	.list-item+.list-item {
 		margin-left: 14px;
 	}
-
 	.list-nav li a {
 		font-size: 11px;
 		line-height: 1.2;
 		letter-spacing: 0.3em;
 	}
-
 	h1 {
 		letter-spacing: 1.2em;
 	}
@@ -692,31 +857,29 @@ footer div a {
 		margin-top: 68px;
 		font-size: 19px;
 	}
-
 	.standart-section {
 		padding: 92px 0 92px;
 	}
-
 	.line-bottom h2,
 	.section-center h2,
 	.section-3 h2,
 	.benefit h2,
-	.bg-dark h2 {
+	.bg-dark h2,
+	.contact .container h2 {
 		line-height: 1.2;
 		letter-spacing: 0.5em;
 	}
 	.line-bottom h2 {
 		margin-bottom: 50px;
 	}
-
-	.row + .row {
+	.row+.row {
 		margin-top: 56px;
 	}
 	.col-4 {
 		float: left;
 		width: 50%;
 	}
-	.col-4 + .col-4 {
+	.col-4+.col-4 {
 		margin-top: 0;
 	}
 	.col-4:nth-child(3) {
@@ -737,26 +900,22 @@ footer div a {
 		margin-top: 16px;
 		font-size: 12px;
 	}
-
 	.section-center {
 		padding-bottom: 112px;
 	}
 	.section-center h2 {
 		margin-bottom: 80px;
 	}
-	.section-center h2 + .row {
+	.section-center h2+.row {
 		display: flex;
 		flex-wrap: wrap;
 	}
-
 	.col-5:nth-child(-n+3) {
 		margin-top: 0;
 	}
-
 	.col-5 {
 		flex-basis: 25%;
 	}
-
 	.section-2 {
 		padding-top: 92px;
 	}
@@ -771,7 +930,6 @@ footer div a {
 		width: 50%;
 		float: left;
 	}
-
 	.imack {
 		margin-top: -102px;
 	}
@@ -779,25 +937,22 @@ footer div a {
 	.section-3 h2 {
 		margin-bottom: 76px;
 	}
-
 	.standart-section.section-3 {
 		padding-bottom: 8px;
 	}
-
 	.grid-item {
 		width: 50%;
 	}
-
 	.benefit {
 		padding-bottom: 96px;
 	}
 	.benefit h2 {
 		margin-bottom: 86px;
 	}
-	.benefit .icon-center > h3 {
+	.benefit .icon-center>h3 {
 		margin: 32px 0;
 	}
-	.benefit a + p {
+	.benefit a+p {
 		margin-bottom: 86px;
 	}
 	.owl-carousel .owl-nav button.owl-next,
@@ -805,18 +960,60 @@ footer div a {
 		height: 66px;
 		width: 66px;
 	}
-
-	/*
-	footer {
-		padding: 92px 0 58px;
+	.section-41-82 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 82px 0;
+  }
+  .section-41-82 h2 {
+    flex-basis: 100%;
+  }
+  .section-41-82 input {
+    flex-basis: 33.333333%;
+    padding: 14px;
+    letter-spacing: .2em;
+  }
+  .section-41-82 input {
+    margin-left: 0;
+    margin-right: 5px;
+  }
+  .section-41-82 button.btn-invert {
+    flex-basis: 10%;
+    margin: 0;
+  }
+  .info {
+    flex-basis: 100%;
+    margin-top: 20px;
 	}
-*/
+	.contact .container h2 {
+		margin-bottom: 64px;
+	}
+	
+	.col-8 dl dt{
+		font-size: 15px;
+		letter-spacing: 0.5em;
+	}
+  footer {
+    padding: 92px 0 58px;
+  }
+  footer ul {
+    margin: 24px 0 72px;
+  }
+  footer ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  footer ul li:nth-child(n+2) {
+    margin-top: 0;
+    margin-left: 13px;
+  }
 }
-
 /*===== @media (min-width: 768px) end =====*/
 
 /*===== @media (min-width: 992px) start =====*/
-
 @media (min-width: 992px) {
 	h1 {
 		letter-spacing: 1.7em;
@@ -827,7 +1024,7 @@ footer div a {
 	.line-bottom h2 {
 		margin-bottom: 77px;
 	}
-	.row + .row {
+	.row+.row {
 		margin-top: 108px;
 	}
 	.col-4 {
@@ -836,7 +1033,6 @@ footer div a {
 	.col-4:nth-child(3) {
 		margin-top: 0;
 	}
-
 	.standart-section {
 		padding: 138px 0 138px;
 	}
@@ -852,30 +1048,37 @@ footer div a {
 	.section-2 {
 		padding-top: 138px;
 	}
-
 	.imack {
 		margin-top: -180px;
 	}
-
 	.grid-item {
 		width: 33.333333%;
 	}
-
 	.benefit {
 		padding-bottom: 144px;
 	}
-
-	/*
-	footer {
-		padding-top: 138px;
+	.contact .container h2{
+		margin-bottom: 96px;
 	}
-*/
+	.col-8{
+		width: 66.666667%;
+	}
+	
+	.col-8 > div{
+		display: flex;
+		justify-content: space-around;
+	}
+	
+	footer {
+    padding-top: 140px;
+  }
+  footer ul {
+    margin-bottom: 108px;
+  }
 }
-
 /*===== @media (min-width: 992px) end =====*/
 
 /*===== @media (min-width: 1200px) start =====*/
-
 @media (min-width: 1200px) {
 	.col-5 {
 		flex-basis: 20%;
@@ -883,7 +1086,6 @@ footer div a {
 	.col-5:last-child {
 		margin-top: 0;
 	}
-
 	.section-3 .text-center {
 		width: 66.666667%;
 		margin-right: auto;
@@ -900,7 +1102,5 @@ footer div a {
 		height: 86px;
 		width: 86px;
 	}
-
 }
-
 /*===== @media (min-width: 1200px) end ======*/
